maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:25: error: ';' expected but integer literal found.
  if (getIndication(xSortie,ySortie-1)) == 9999) avance();
                                           ^